# metaphorizer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/models/: database.py  metaphor.py  paper.py
app/routers/: ingest.py  metaphors.py  paper.py  topics.py  translations.py
app/schemas/: llm.py  metaphor.py  paper.py
app/services/: claude_provider.py  extractor.py  gutenberg.py  llm_provider.py  organizer.py  pdf_renderer.py  prompt_guard.py  translator.py  writer.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html  index.html  ingest.html  paper_config.html  paper_preview.html  review.html  topics.html  translations.html
app/templates/pdf/: paper.html
data/: seed_metaphors.json
