[project]
name = "metaphorizer"
version = "0.1.0"
description = "AI-powered literary metaphor analysis tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
